--- a/todo/templates/signup.html
+++ b/todo/templates/signup.html
@@ -7,7 +7,7 @@
   <!-- Background image -->
   <div class="p-5 bg-image" style="
         background-image: url('https://mdbootstrap.com/img/new/textures/full/171.jpg');
-        height: 300px;
+        height: 10px;
         "></div>
   <!-- Background image -->
 
@@ -17,6 +17,11 @@
         backdrop-filter: blur(30px);
         ">
     <div class="card-body py-5 px-md-5">
+      
+      <div class="d-flex align-items-center mb-3 pb-1">
+        <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
+        <span class="h1 fw-bold mb-0">LikeToTalk</span>
+      </div>
 
       <div class="row d-flex justify-content-center">
         <div class="col-lg-8">
@@ -65,9 +70,9 @@
             <button type="submit" class="btn btn-primary btn-block mb-4">
               Sign up
             </button>
-            <button type="button" class="btn btn-success btn-block mb-4">
-           <a href= '/login' style='text-decoration:none;' >login</a>
-            </button>
+           
+           <a href= '/login' style='text-decoration:none;' class="btn btn-success btn-block mb-3">login</a>
+           
 
             <!-- Register buttons -->
             <div class="text-center">
