--- a/todo/templates/message.html
+++ b/todo/templates/message.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block tittle %}
 Message.... Page
 {% endblock tittle %}
@@ -27,53 +27,11 @@ Message.... Page
  </form> 
  <br><br>
 <a href='/logout' class="btn btn-danger btn-rounded" style="margin-top:5px; margin-left:50%;">logout</a>
-{{ messageto|json_script:"receiver" }}
+{{ other_user_id|json_script:"other_user_id" }}
 {{sender|json_script:"sender"}}
-<script>
-const receiver=JSON.parse(document.getElementById('receiver').textContent);             
-console.log(window.location.pathname)
-const socket = new WebSocket(
-  'ws://'
-  + window.location.host
-  + '/ws/todo/'
-  + receiver
-  + '/'
-);
-
-socket.onopen=(e)=>{
-    console.log("websocket connection open...")
- }
-   
-socket.onmessage =(e)=>{//handle when message receive
-    const data = JSON.parse(e.data);
-    console.log(data)
-    document.getElementById('textarea').value+=(data.message+'\n')
-    }
-
-socket.onclose=(e)=>{
-    console.error('chat socket closed unexpectedly')
-}
-
-   document.getElementById('text').focus()
-   document.getElementById('text').onkeyup = (event)=> {
-    if (event.keyCode === 13) {  // enter, return
-        document.getElementById('btn').click();
-    }
-};
-    const sender=JSON.parse(document.getElementById('sender').textContent)
-    document.getElementById('btn').onclick=(event)=>{
-    const messageInputDom = document.getElementById('text');
-    const message = messageInputDom.value;
-    socket.send(JSON.stringify({
-        'message': message,
-        'user':sender,
-        'receiver':receiver
-        
-    }));
-    messageInputDom.value = '';
-};
-
-</script>   
 
 {% endblock body %}
+{% block script %}
+<script type="text/javascript" src="{% static 'js/message.js' %}" ></script>
+{% endblock script %}
 
