--- a/todo/templates/profile.html
+++ b/todo/templates/profile.html
@@ -12,7 +12,7 @@ Profile Page
 {% for user in users  %}
 {% comment %} just ingore the login user name can't talk to yourself atleast here {% endcomment %}
 {% if  user.name != username %}<ul> 
-<li><a href ={% url 'message' user.name %}>{{ user.name }}</a></li>
+<li><a href ={% url 'message' user.id %}>{{ user.name }}</a></li>
 </ul>{% endif %}
 {% endfor %}
       
