--- a/todo/templates/profile.html
+++ b/todo/templates/profile.html
@@ -12,7 +12,9 @@ Profile Page
 {% for user in users  %}
 {% comment %} just ingore the login user name can't talk to yourself atleast here {% endcomment %}
 {% if  user.name != username %}<ul> 
-<li><a href ={% url 'message' user.id %}>{{ user.name }}</a></li>
+<li><a href ={% url 'message' user.id %}> <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava6-bg.webp"
+    alt="avatar 1" style="width: 45px; height: 100%;">
+    <div>{{ user.name }}</a></li>
 </ul>{% endif %}
 {% endfor %}
       
